src/test/ui/privacy/decl-macro.stderr
error[E0603]: macro `mac` is private
  --> $DIR/decl-macro.rs:8:8
   |
LL |     m::mac!();
   |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
